Visual improvements to marker

--- a/src/map-badge-v2.html
+++ b/src/map-badge-v2.html
@@ -312,7 +312,7 @@ function createMarkerHTML(personState, activityState, pictureUrl) {
           <i class="mdi ${activityConfig.icon}"></i>
         </div>
       </div>
-      <div class="custom-marker-position-circle" style="background: white; border: 2px solid ${zoneConfig.color};"></div>
+      <div class="custom-marker-position-circle" style="background: #76D4C3; border: 2px solid ${zoneConfig.color};"></div>
     </div>
   `;
 }
