feat: zoom on click, google maps click fix, and activity hysteresis

--- a/src/map-badge-v2.html
+++ b/src/map-badge-v2.html
@@ -582,6 +582,7 @@ function updateMarkerOSM(entityId, data, lat, lon, personState, activityState, p
         currentPopup.closePopup();
       }
       currentPopup = marker;
+      map.setView(marker.getLatLng(), 17, { animate: true });
     });
 
     markers[entityId] = marker;
@@ -634,13 +635,16 @@ function updateMarkerGoogle(entityId, data, lat, lon, personState, activityState
         div.title = this.title;
 
         // Add click event for info window
-        div.addEventListener('click', () => {
+        div.addEventListener('click', (e) => {
+          e.stopPropagation();
           // Close currently open popup
           if (currentPopup && currentPopup !== this.infoWindow) {
             currentPopup.close();
           }
 
           if (this.infoWindow) {
+            map.setCenter(this.position);
+            map.setZoom(17);
             this.infoWindow.open(this.getMap());
             currentPopup = this.infoWindow;
           }
